[fix] content jump when modal is visible.

--- a/client/src/assets/styles/components/scroll-disabled.scss
+++ b/client/src/assets/styles/components/scroll-disabled.scss
@@ -3,3 +3,7 @@
 .scroll-disabled {
   overflow-y: hidden;
 }
+
+.prevent-jump {
+  padding-right: var(--scrollbar-width);
+}
