--- a/client/src/assets/styles/utils/variables.scss
+++ b/client/src/assets/styles/utils/variables.scss
@@ -11,4 +11,6 @@
   --input-border-radius: 5px;
 
   --transparent-white: #ffffff9f;
+
+  --scrollbar-width: 17px;
 }
